# poke-api-manager

./: .dockerignore  .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: .pre-commit-config.yaml  devcontainer.json  docker-compose.yml
.github/workflows/: checks.yml
apps/wrapper/: apps.py  models.py  serializers.py  viewsets.py
apps/wrapper/classes/: list_paginator.py  pokemon_api.py  pokemon_api_wrapper.py
apps/wrapper/migrations/: 0001_initial.py  0002_alter_pokemonsprite_back_default_and_more.py  0003_remove_pokemon_sprites_pokemon_sprites.py
apps/wrapper/tests/: test.py
apps/wrapper/tests/test_v1/: test_api.py
config/: api.py  asgi.py  settings.py  urls.py  wsgi.py
container/: Dockerfile
container/local/scripts/: entrypoint.sh  start.sh
